src.1/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the local time for the related Lead or Contact.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset__c), 
&quot;Unknown&quot;, 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp; 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp; 
LEFT( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp; 
TEXT( 
IF( 
OR( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) = 12 
), 
12, 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp;&quot;:&quot;&amp; 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 15, 2 ) 
&amp;&quot; &quot;&amp; 
IF( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
) 
&amp; &quot; &quot; &amp; 
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;) 
)</formula>
        <inlineHelpText>Shows the local time for the related Lead or Contact.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Timezone abbreviation (PST, EST,etc..)</description>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset__c</fullName>
        <description>Shows the UTC timezone offset of the Lead / Contact associated with the task.</description>
        <inlineHelpText>Shows the UTC timezone offset of the Lead / Contact associated with the task.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_Character_Created_by_ID__c</fullName>
        <formula>CASESAFEID(CreatedById)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Character Created by ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Character_What_ID__c</fullName>
        <formula>CASESAFEID(WhatId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Character What ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Character_Who_ID__c</fullName>
        <formula>CASESAFEID( WhoId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Character Who ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X8_Touch_Program__c</fullName>
        <inlineHelpText>To track the progress of each lead</inlineHelpText>
        <label>8-Touch Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ADR_Phone_Demos_Yesterday_s_Team_Woody</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Due_Time__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Date_Completed_New__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Activity_Type__c</field>
            <operation>equals</operation>
            <value>Phone Demo,ADR Set,ADR Re-set</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>SAE rep 4</value>
        </filters>
        <filters>
            <field>Activity_Results__c</field>
            <operation>equals</operation>
            <value>No-Show</value>
        </filters>
        <label>Team Woody No-shows Last 30 Days</label>
        <sharedTo>
            <role>SAE_4_Manager</role>
            <role>SAE_Rep_4</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADR_Phone_Demo_Today_Team_Tom</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Due_Time__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Activity_Type__c</field>
            <operation>equals</operation>
            <value>ADR Set,Phone Demo,ADR Re-Set</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Scheduled,Not Started</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>SAE Rep 2</value>
        </filters>
        <label>ADR Phone Demo Today - Team Tom</label>
        <sharedTo>
            <role>SAE_Manager_6</role>
            <role>SAE_Rep_6</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADR_Sets_My_Team_Today</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ADR_Set_Received__c</columns>
        <columns>Event_Source__c</columns>
        <columns>ADR_Set__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>SR_Date_Created__c</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ADR_Set__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Activity_Type__c</field>
            <operation>equals</operation>
            <value>ADR Set,ADR Re-set</value>
        </filters>
        <label>ADR Sets My Team Today</label>
        <sharedTo>
            <role>SAE_Manager_1</role>
            <role>SAE_Manager_2</role>
            <role>SAE_Manager_3</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADR_Sets_Unreceived_All_Teams_All_Time</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Event_Source__c</columns>
        <columns>SR_Date_Created__c</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADR_Set__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ADR_Set_Received__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SR_Date_Created__c</field>
            <operation>equals</operation>
            <value>LAST_QUARTER</value>
        </filters>
        <label>ADR Sets Unreceived - All Teams Last Qtr</label>
        <sharedTo>
            <role>SAE_Manager_1</role>
            <role>SAE_Manager_2</role>
            <role>SAE_Manager_3</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ali_s_Activities_for_Kent_Lutz</fullName>
        <booleanFilter>(2 or 3) and 1</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>aredding</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <label>Ali&#39;s Activities ( for Kent Lutz)</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_ADR_Sets_QTR</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ADR_Set_Received__c</columns>
        <columns>Event_Source__c</columns>
        <columns>ADR_Set__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>SR_Date_Created__c</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ADR_Set__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SR_Date_Created__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>ADR Sets All - My Team This QTR</label>
        <sharedTo>
            <role>SAE_Manager_1</role>
            <role>SAE_Manager_2</role>
            <role>SAE_Manager_3</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Sets_My_Team_Today</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ADR_Set_Received__c</columns>
        <columns>Event_Source__c</columns>
        <columns>ADR_Set__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>SR_Date_Created__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Due_Time__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ADR_Set__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Activity_Type__c</field>
            <operation>equals</operation>
            <value>ADR Set,ADR Re-Set,Phone Demo</value>
        </filters>
        <label>All Sets My Team Today</label>
        <sharedTo>
            <role>SAE_Manager_1</role>
            <role>SAE_Manager_2</role>
            <role>SAE_Manager_3</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Angel_s_HG_Lead_List</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>tz__Timezone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>Call for Healthgrades - From Lead List</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Acastill</value>
        </filters>
        <label>Angel&#39;s HG Lead List</label>
        <sharedTo>
            <role>ADR_Rep_7</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Daily_Activities</fullName>
        <booleanFilter>(1 and 2) and (1 and 3)</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Today&#39;s Tasks/Events</label>
        <sharedTo>
            <role>ADR_Manager_1</role>
            <role>ADR_Manager_3</role>
            <role>ADR_Rep_1</role>
            <role>ADR_Rep_7</role>
            <role>Inside_Sales_Coordinator</role>
            <role>SAE_Manager_1</role>
            <role>SAE_Manager_2</role>
            <role>SAE_Manager_3</role>
            <role>SAE_Rep_1</role>
            <role>SAE_Rep_2</role>
            <role>SAE_Rep_3</role>
            <role>SAE_Rep_4</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Demo_Schedule</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>Event_Status__c</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Scheduled,Planned</value>
        </filters>
        <filters>
            <field>Activity_Type__c</field>
            <operation>equals</operation>
            <value>Phone Demo,ADR Set,ADR Re-Set</value>
        </filters>
        <label>Upcoming Demo Schedule</label>
        <sharedTo>
            <role>ADR_Manager_1</role>
            <role>ADR_Rep_1</role>
            <role>Inside_Sales_Coordinator</role>
            <role>SAE_Manager_1</role>
            <role>SAE_Manager_2</role>
            <role>SAE_Manager_3</role>
            <role>SAE_Rep_1</role>
            <role>SAE_Rep_2</role>
            <role>SAE_Rep_3</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Demo_sets_report1</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Due_Time__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <filters>
            <field>Activity_Type__c</field>
            <operation>equals</operation>
            <value>Phone Demo</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>LAST_N_DAYS:45</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Scheduled,Not Started</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>charlie rep,alpha rep,bravo rep,ae rep</value>
        </filters>
        <label>Demo sets - report</label>
        <sharedTo>
            <role>SAE_Manager_1</role>
            <role>SAE_Manager_2</role>
            <role>SAE_Manager_3</role>
            <role>SAE_Rep_1</role>
            <role>SAE_Rep_2</role>
            <role>SAE_Rep_3</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Floating_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Date_Completed__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Activity_Type__c</columns>
        <columns>Activity_Results__c</columns>
        <filterScope>Mine</filterScope>
        <label>Floating Tasks</label>
        <sharedTo>
            <role>Extended_Sales_Coordinator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Future_Event1</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>Activity_Results__c</field>
            <operation>equals</operation>
            <value>Future Event</value>
        </filters>
        <filters>
            <field>Date_Completed_New__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Activities Needing &quot;Spoke With&quot; Status</label>
        <sharedTo>
            <role>ESR_South_East_Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HG_Lead_List_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>Call for Healthgrades - From Lead List</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <label>HG Lead List - Tasks</label>
        <sharedTo>
            <role>ADR_Rep_3</role>
            <role>ADR_Rep_7</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Janette_s_tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>jstewart</value>
        </filters>
        <filters>
            <field>Date_Completed_New__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Jason tasks</label>
        <sharedTo>
            <group>SAE_3</group>
        </sharedTo>
    </listViews>
</CustomObject>